INCLUDE_DIRECTORIES(./)
ADD_SUBDIRECTORY(engine/)
ADD_SUBDIRECTORY(drawer/)
ADD_SUBDIRECTORY(loader/)
ADD_SUBDIRECTORY(movement/)
ADD_EXECUTABLE(../terrain main.cpp)
TARGET_LINK_LIBRARIES(../terrain ${OPENGL_LIBRARIES} ${GLM_LIBRARIES} ${GLEW_LIBRARIES} ${GLFW_LIBRARIES} pthread engine drawer loader movement)
