INCLUDE_DIRECTORIES(./)
ADD_SUBDIRECTORY(engine/)
ADD_SUBDIRECTORY(drawer/)
ADD_SUBDIRECTORY(movement/)
ADD_EXECUTABLE(../viewer main.cpp)
TARGET_LINK_LIBRARIES(../viewer ${OPENGL_LIBRARIES} ${GLM_LIBRARIES} ${GLEW_LIBRARIES} ${GLFW_LIBRARIES} ${ASSIMP_LIBRARIES} ${DEVIL_LIBRARIES} pthread engine drawer movement)
